2012-04-13 Roman
- SYS: For build to OpenSuSE and Mandriva defined "pkgconfigdir" variable.
- FIX:SYS: Permition for write on "/gen/workdir", "/gen/icodir" and "/gen/moddir" is fixed.
- DAQ.JavaLikeCalc: Operation '^' syntax highlight is added.


2012-04-06 Roman 0.8.0
- UI.QTStarter: Splash is updated for 0.8.0 release.
- DOC: Release notes for version 0.8.0 is added. Index files is updated.
- FIX:DAQ.OPC_UA: Build for old version of OpenSSL is fixed.


- UI.Vision: The signal QAction::activated(), from QT3, is replaced by QAction::triggered() full at last.


2012-04-05 Roman
- FIX:UI.QTStarter: Count only "QMainWindow" set for correct exit on last modules list window close.
- FIX:DAQ.Template: Restore template build after module DAQ.JavaLikeCalc or builded function close.
- FIX:Special.SystemTests: Original message fixed.
- FIX:DAQ.OPC_UA: Protocol requests counter show is fixed.


2012-04-04 Roman
- SYS: Config files some fixed and clear.
- SYS: Service command "<scan path="%2fgen%2fconfig"/>" is added for config file against rescan.
- FIX:DAQ.JavaLikeCalc: Start repeate is prevented.
- DAQ.SystemTests: Direct tests' function call by dynamic is added.
- UI.Vision: Double click process is added for full screen Full Video play by Phonon of primitive "Media".
- DataDB: Library VCABase is updated for Prescription engine some fix.
- FIX:Archive.DBArch: Messages archive's time limit size last apply is fixed.


2012-03-31 Roman
- SYS:Debian rules build updated for: dh_autoreconf add, openscada.pc and includes place,
    typical dependents for Debian and Ubuntu is added to "Build-Depends:" and compatible down to 5.


2012-03-30 Roman
- !!!!:FIX:UI.VCAngine: Resources to widget's attributes is made more clear (by use Recursive mutex)
    and use one generic resource, for session and other, for each other dead locking prevent.


2012-03-29 Roman
- SYS: Append files support is added to I18N process code into I18N.mk.